--- a/insurance/apps/profile/templates/profile/userprofile_base2.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base2.html
@@ -19,10 +19,13 @@
                         <div class="tabs2">
                             <ul class="tab5">
                                 <li><a href="{% url userprofile_edit %}" class="active">
-                                    <b>{% if main_persona %}{{ main_persona.last_name }} {{ main_persona.first_name }}{% else %}
-                                        Вы{% endif %}</b></a></li>
+                                    {% if main_persona %}
+                                        {{ main_persona.last_name }} {{ main_persona.first_name }}
+                                    {% else %}
+                                        Вы
+                                    {% endif %}</a></li>
                                 {% for pers in personas %}
-                                    <li class="user_name"><a
+                                    <li><a
                                             href="{% url userprofile_editpersona pers.id %}">{{ pers.last_name }} {{ pers.first_name }}</a>
                                     </li>
                                 {% endfor %}
@@ -45,15 +48,41 @@
                                 {% include "profile/forms/persona_form2.html" with persona=main_persona %}
                             </div>
                             <div class="bg_tabs2_f">
+                                <div class="user_data">
+                                    Сменить пароль:
+                                </div>
                                 <form action="{% url auth_password_change %}" method="post">
                                     {% csrf_token %}
-                                    <table>
-                                        {{ password_form.as_table }}
+                                    <table cellpadding="0" cellspacing="0" class="table_user_form">
+                                        <tr>
+                                            <th>Старый пароль:</th>
+                                            <th></th>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                {{ password_form.old_password }}
+                                            </td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <th>Новый пароль:</th>
+                                            <th>Падтвердите пароль:</th>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                {{ password_form.new_password1 }}
+                                            </td>
+                                            <td>
+                                                {{ password_form.new_password2 }}
+                                            </td>
+                                        </tr>
                                     </table>
+                                    <div class="clear"></div>
                                     <div class="box_button_seva">
                                         <p><input name="" type="submit" value="ИЗМЕНИТЬ" class="style_button"/></p>
                                     </div>
                                 </form>
+                                <div class="clear"></div>
                             </div>
                         </div>
                     </div>
