--- a/insurance/apps/profile/templates/profile/userprofile_editpersona.html
+++ b/insurance/apps/profile/templates/profile/userprofile_editpersona.html
@@ -18,26 +18,17 @@
                     <div class="bg_tabs_b">
                         <div class="tabs2">
                             <ul class="tab5">
-                                <li><a href="{% url userprofile_edit %}" class="user_name">
-                                    <b>{% if main_persona %}{{ main_persona.last_name }} {{ main_persona.first_name }}{% else %}
-                                        Вы{% endif %}</b></a></li>
+                                <li><a href="{% url userprofile_edit %}">
+                                    {% if main_persona %}{{ main_persona.last_name }} {{ main_persona.first_name }}{% else %}
+                                        Вы{% endif %}</a></li>
                                 {% for pers in personas %}
-                                    <li class="{% ifequal pers.id persona.id %}active{% else %}user_name{% endifequal %}"><a
-                                            href="{% url userprofile_editpersona pers.id %}">{{ pers.last_name }} {{ pers.first_name }}</a>
+                                    <li><a href="{% url userprofile_editpersona pers.id %}"
+                                           {% ifequal pers.id persona.id %}class="active"{% endifequal %}>{{ pers.last_name }} {{ pers.first_name }}</a>
                                     </li>
                                 {% endfor %}
                             </ul>
                             <!---- Первая закладка внутри ----->
                             <div id="tabs_cont3_1" class="bg_tabs3_box">
-{#                                <div class="bg_tabs2_f">#}
-{#                                    <div class="cont_text">#}
-{#                                        <p>Вы можете добавить персональные данные других лиц. Эти данные помогут вам#}
-{#                                            эффективно и быстро оформить для них страховые полисы.</p>#}
-{##}
-{#                                        <p><a href="{% url userprofile_addpersona %}" class="style_button">ДОБАВИТЬ</a>#}
-{#                                        </p></p>#}
-{#                                    </div>#}
-{#                                </div>#}
                                 {% url userprofile_editpersona as action_url %}
                                 {% include "profile/forms/persona_form2.html" with persona=persona %}
                             </div>
