Маленькие изменения в главном шаблоне

--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -42,26 +42,29 @@
 
 <div class="benefits">
   <div class="header_benefits">
-    <span>Н</span>АШИ ПРЕИМУЩЕСТВА >>
+    <span>Н</span>АШИ ПРЕИМУЩЕСТВА
   </div>
+  <div style="clear:both;"></div>
   <div class="benefits_link">
-    <a href="#">Большая</a>
-    <a href="#">Надежная</a>
-    <a href="#">Инновационная</a>
-    <a href="#">Сервисная</a>
-    <a href="#">Ответственная</a>
-    <a href="#">Больше чем просто страховая компания</a>
+    <a style=":hover {text-decoration: underline}" href="#">Все Ваши полисы всегда под рукой</a><br/>
+    <p style="color:#472313; font-size: 11px;">Получите книжку-помощник, где будут находится все ваши полисы, полезная информация для общения со страховой компанией. </p>
+    <a href="#">Все Ваши страховые полисы в вашем личном кабинете
+    онлайн</a><br/>
+    <p style="color:#472313; font-size: 11px;">Подробная информация о купленных вами полисах в личном кабинете. Сравнительный анализ ваших полисов</p>
+    <a href="#">Рассчитай ONLINE минимальную цену полиса 50 страховых.
+    компаний</a><br/>
+    <p style="color:#472313; font-size: 11px;">Посмотри таблицу сравнения цены и условий полисов. Цена всегда дешевле - <span style="font-weight:bold;">мы не берем комиссии</span>!. </p>
   </div>
 </div>
-<div class="button_box">
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_1.jpg" alt="" /></a></div>
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_2.jpg" alt="" /></a></div>
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_3.jpg" alt="" /></a></div>
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_4.jpg" alt="" /></a></div>
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_5.jpg" alt="" /></a></div>
-  <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_6.jpg" alt="" /></a></div>
+<!-- <div class="button_box"> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_1.jpg" alt="" /></a></div> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_2.jpg" alt="" /></a></div> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_3.jpg" alt="" /></a></div> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_4.jpg" alt="" /></a></div> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_5.jpg" alt="" /></a></div> -->
+<!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_6.jpg" alt="" /></a></div> -->
 
-</div>
+<!-- </div> -->
 <div class="tabs_footer">
   <ul class="tabs_footer_link">
     <li><a class="" href="#tab_01">Прочее</a></li>
