И еще одна правка в стиле и шаблоне Главной

--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -46,12 +46,12 @@
   </div>
   <div style="clear:both;"></div>
   <div class="benefits_link">
-    <a style=":hover {text-decoration: underline}" href="#">Все Ваши полисы всегда под рукой</a><br/>
+    <a style=":hover {text-decoration: none}" href="#">Все Ваши полисы всегда под рукой</a><br/>
     <p style="color:#472313; font-size: 11px;">Получите книжку-помощник, где будут находится все ваши полисы, полезная информация для общения со страховой компанией. </p>
-    <a href="#">Все Ваши страховые полисы в вашем личном кабинете
+    <a style=":hover {text-decoration: none}" href="#">Все Ваши страховые полисы в вашем личном кабинете
     онлайн</a><br/>
     <p style="color:#472313; font-size: 11px;">Подробная информация о купленных вами полисах в личном кабинете. Сравнительный анализ ваших полисов</p>
-    <a href="#">Рассчитай ONLINE минимальную цену полиса 50 страховых.
+    <a style=":hover {text-decoration: none}" href="#">Рассчитай ONLINE минимальную цену полиса 50 страховых.
     компаний</a><br/>
     <p style="color:#472313; font-size: 11px;">Посмотри таблицу сравнения цены и условий полисов. Цена всегда дешевле - <span style="font-weight:bold;">мы не берем комиссии</span>!. </p>
   </div>
