--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -173,7 +173,7 @@ a:hover        {text-decoration:none}
 		.header_benefits span	{color:#e65a02;}
 	.benefits_link	{float:left; width:590px;}
 		.benefits_link a	{padding:2px 0 4px 25px; background:url(/static/images/plus.jpg) 0 0 no-repeat; margin:0 16px 0 0; color:#472313; font-size:14px; text-decoration:none; line-height:30px;}
-		.benefits_link a:hover	{text-decoration:underline;}
+		/* .benefits_link a:hover	{text-decoration:underline;} */
 		
 .tabs_footer	{padding:0 0 0 25px;}
 	.tabs_footer_link	{overflow:hidden; padding:0 30px 0 10px; float:left;}
