--- a/insurance/apps/profile/templates/profile/userprofile_base2.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base2.html
@@ -8,7 +8,7 @@
             <ul class="tabs">
                 <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
                 <li><a href="#">МОИ ПОЛИСЫ</a></li>
-                <li><a href="#">УВЕДОМЛЕНИЯ</a></li>
+                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
 
