--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -65,95 +65,7 @@
 <!--   <div class="button_link"><a href="#"><img src="{{ STATIC_URL }}images/button_6.jpg" alt="" /></a></div> -->
 
 <!-- </div> -->
-<div class="tabs_footer">
-  <ul class="tabs_footer_link">
-    <li><a class="" href="#tab_01">Прочее</a></li>
-    <li><a class=""  href="#tab_02">Новости</a></li>
-    <li><a class="" href="#tab_03">Анонсы</a></li>
-  </ul>
-  <div class="tabs_footer_cont" id="tab_01">
-    <div class="tabs_footer_cont_left">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Наш сайт,как и все, что делает наша страховая</a> компания
-        создан для вас,наших уважаемых клиентов!
-        Здесь вы сможете легко рассчитывать стоимость и заказать
-        полис для всех видов страхования авто,недвижимости...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-    <div class="tabs_footer_cont_right">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Страхование</a>: особый вид экономических отношений,
-        призванный обеспечить страховую защиту людей и
-        их дел от различного рода опасностей...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-  </div>
-  <div class="tabs_footer_cont" id="tab_02">
-    <div class="tabs_footer_cont_left">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Наш сайт,как и все, что делает наша страховая</a> компания
-        создан для вас,наших уважаемых клиентов!
-        Здесь вы сможете легко рассчитывать стоимость и заказать
-        полис для всех видов страхования авто,недвижимости...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-    <div class="tabs_footer_cont_right">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Страхование</a>: особый вид экономических отношений,
-        призванный обеспечить страховую защиту людей и
-        их дел от различного рода опасностей...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-  </div>
-  <div class="tabs_footer_cont" id="tab_03">
-    <div class="tabs_footer_cont_left">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Наш сайт,как и все, что делает наша страховая</a> компания
-        создан для вас,наших уважаемых клиентов!
-        Здесь вы сможете легко рассчитывать стоимость и заказать
-        полис для всех видов страхования авто,недвижимости...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-    <div class="tabs_footer_cont_right">
-      <div class="tabs_footer_cont_img">
-	<img src="{{ STATIC_URL }}images/img.jpg" alt="" />
-      </div>
-      <div class="tabs_footer_cont_text">
-	<a href="#">Страхование</a>: особый вид экономических отношений,
-        призванный обеспечить страховую защиту людей и
-        их дел от различного рода опасностей...
-	<a href="#" class="pointer"><img src="{{ STATIC_URL }}images/pointer.png" alt="" /></a>				</div>
-    </div>
-  </div>
-  <script>
-    $(function () {
-    var tabContainers = $('div.tabs_footer > .tabs_footer_cont'); // получаем массив контейнеров
-    tabContainers.hide().filter(':first').show(); // прячем все, кроме первого
-    // далее обрабатывается клик по вкладке
-    $('div.tabs_footer ul.tabs_footer_link a').click(function () {
-    tabContainers.hide(); // прячем все табы
-    tabContainers.filter(this.hash).show(); // показываем содержимое текущего
-    $('div.tabs_footer ul.tabs_footer_link a').removeClass('selected'); // у всех убираем класс 'selected'
-    $(this).addClass('selected'); // текушей вкладке добавляем класс 'selected'
-    return false;
-    }).filter(':first').click();
-    });
-  </script>
-</div>
+
+{% include "includes/news_panel.html" %}
 
 {% endblock %}
