--- a/insurance/apps/notification/templates/notification/single.html
+++ b/insurance/apps/notification/templates/notification/single.html
@@ -19,27 +19,24 @@
               <div class="bg_tabs2_f">
                 <div class="cont_text">
 <div id="ins_notification_inbox">
+  
   <h3>Мои уведомления</h3>
-  <table width="" cellspacing="" cellpadding="" border="">
+  <table width="100%" cellspacing="0" class="notices">
     <tr>
-      <th>Отправитель</th>
       <th>Тема</th>
-      <th>Получено</th>
-      <!-- <th>Действие</th> -->
+      <th>Содержание</th>
+      <th>Дата</th>
     </tr>
-	<tr>
-	  <td>{{ notice.sender }}</td>
-	  <td>{{ notice.sub }}</td>
+	<tr class="{% cycle 'odd' 'nodd' %}{% if notice.unseen %} unread{% endif %}">
+	  <td>{{ notice.sub }}</a></td>
+	  <td><a href="{% url notification_notice notice.id %}">{{ notice.message|truncatewords_html:"4" }}</a></td>
 	  <td>{{ notice.added }}</td>
 	</tr>
   </table>
-  <div id="buttons">
-  <ul>
-    <li><a href="{% url ins_notification_question %}">Задать вопрос</a></li>
-    <li class="separator"> | </li>
-    <li><a href="{% url userprofile_edit %}">Назад</a></li>
-
-  </ul>
+  
+<div id="buttons">
+    <a href="{% url ins_notification_question %}">Задать вопрос</a> | 
+    <a href="{% url notification_notices %}">Назад</a>
 </div>
     
   </div>
