--- a/insurance/apps/profile/templates/profile/userprofile_base2.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base2.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
-{% load inbox %}
-
 
 {% block content %}
     <div class="content">
@@ -8,7 +6,7 @@
             <ul class="tabs">
                 <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
                 <li><a href="#">МОИ ПОЛИСЫ</a></li>
-                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ</a></li>
+                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
 
