--- a/insurance/apps/profile/templates/profile/userprofile_editpersona.html
+++ b/insurance/apps/profile/templates/profile/userprofile_editpersona.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %}
-{% load inbox %}
-
-
 {% block content %}
     <div class="content">
         <div class="tabs_box">
             <ul class="tabs">
                 <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
                 <li><a href="#">МОИ ПОЛИСЫ</a></li>
-                <li><a href="#">УВЕДОМЛЕНИЯ</a></li>
+                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
 
