Мелкий фикс в отображение новостей на Главной

--- a/insurance/templates/includes/news_panel.html
+++ b/insurance/templates/includes/news_panel.html
@@ -21,7 +21,7 @@
     {% endfor %}
   </div>
   <div class="tabs_footer_cont" id="tab_03">
-    {% for item in news %}
+    {% for item in announce %}
     <div class='tabs_footer_cont_left'>
       {# <div class="{% cycle 'tabs_footer_cont_left' 'tabs_footer_cont_right' %}">#}
       {% include "includes/news_small_item.html" %}
