Issue #45 (1st form).

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -9,8 +9,16 @@ DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3', # Add 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
         'NAME': 'insurance.db',                      # Or path to database file if using sqlite3.
+    },
+    'remote': {
+        'NAME': 'inservlet',
+        'ENGINE': 'django.db.backends.mysql',
+        'USER': 'root',
+        'PASSWORD': ''
     }
 }
+
+DATABASE_ROUTERS = ['router.NewcalcRouter',]
 
 # Unique 
 SECRET_KEY = 'y8!nb5y#di-gm&6glczhn1x6!anpk#i$$(qtq7p@^0k)x*(qb$'
