--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -3,7 +3,8 @@
 <html>
 <head>
     <title>Step1</title>
-    <script type="text/javascript" src="/static/js/jquery-1.6.3.min.js"></script>
+    <script type="text/javascript"
+            src="/static/js/jquery-1.6.3.min.js"></script>
     <script type="text/javascript">
         $(function() {
                     if ($("#id_mark").val() == "") {
@@ -37,8 +38,32 @@
                                     $("#id_price").val('');
                                     $("#id_price").attr("disabled", true);
                                 }
+                                else
+                                    $.ajax(
+                                            {
+                                                url:"{% url get_price %}",
+                                                data:{power:$("#id_power").val()},
+                                                dataType:"text",
+                                                success:function(data) {
+                                                    if (data == "") {
+                                                        $("#stoim").html("");
+                                                        $("#id_price").attr("disabled", true);
+                                                    }
+                                                    else {
+                                                        $("#stoim").html("Стоимость должна быть " + data);
+                                                        $("#id_price").removeAttr("disabled");
+                                                    }
+                                                }
+                                            }
+                                    );
                             }
                         }
+                    }
+                    if ($("#id_unlimited_users").is(':checked')) {
+                        $("#id_age").val('');
+                        $("#id_age").attr("disabled", true);
+                        $("#id_experience_driving").val('');
+                        $("#id_experience_driving").attr("disabled", true);
                     }
                     // Mark.
                     $("#id_mark").change(function() {
@@ -135,10 +160,27 @@
                     $("#id_power").change(function() {
                         $("#id_price").val('');
                         if ($("#id_power").val() == "") {
+                            $("#stoim").html("");
                             $("#id_price").attr("disabled", true);
                         }
                         else
-                            $("#id_price").removeAttr("disabled");
+                            $.ajax(
+                                    {
+                                        url:"{% url get_price %}",
+                                        data:{power:$("#id_power").val()},
+                                        dataType:"text",
+                                        success:function(data) {
+                                            if (data == "") {
+                                                $("#stoim").html("");
+                                                $("#id_price").attr("disabled", true);
+                                            }
+                                            else {
+                                                $("#stoim").html("Стоимость должна быть " + data);
+                                                $("#id_price").removeAttr("disabled");
+                                            }
+                                        }
+                                    }
+                            );
                     });
                     // Unlimited users.
                     $("#id_unlimited_users").change(function() {
@@ -158,6 +200,8 @@
     </script>
 </head>
 <body>
+<b id="stoim"></b><br/>
+
 <form action="" method="post">
     {% csrf_token %}
     <table>
