--- a/insurance/templates/includes/popup_questions.html
+++ b/insurance/templates/includes/popup_questions.html
@@ -24,7 +24,7 @@
        {% if not user.is_authenticated %}
       <div class="fonsize_11">
         <p>Введите код указанный на картинке.</p>
-        {{ form.captcha }}
+        {{ question_form.captcha }}
       </div>
       {% endif %}
       <div class="pop_up_button_send">
