заменены картинки для карусели

--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -9,11 +9,12 @@
     <div class="next arrow"><img src="{{ STATIC_URL }}images/px.gif" alt="" /></div>
 
     <div id="stage">
-      <a href="#tabs_crug_1"><img class="default" src="{{ STATIC_URL }}images/scroll/scroll_img_1.jpg" width="229" height="302"/></a>
-      <a href="#tabs_crug_2"><img src="{{ STATIC_URL }}images/scroll/scroll_img_2.jpg" width="229" height="302" /></a>
-      <a href="#tabs_crug_3"><img src="{{ STATIC_URL }}images/scroll/scroll_img_3.jpg"  width="229" height="302" /></a>
+      <a href="#tabs_crug_1"><img class="default" src="{{ STATIC_URL }}images/scroll/scroll_img_1.png" width="226" height="262"/></a>
+      <a href="#tabs_crug_2"><img src="{{ STATIC_URL }}images/scroll/scroll_img_2.png" width="226" height="262" /></a>
+      <a href="#tabs_crug_3"><img src="{{ STATIC_URL }}images/scroll/scroll_img_3.png"  width="226" height="262" /></a>
     </div>
   </div>
+
   <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
   <div class="tabs" id="tabs_crug_1">
     <img src="{{ STATIC_URL }}images/tabs.jpg" alt="" />
@@ -25,6 +26,8 @@
     <img src="{{ STATIC_URL }}images/tabs_3.jpg" alt="" />
   </div>
 </div>
+
+
 <script>
   $(function () {
   var tabContainers = $('div.content_home > .tabs'); // получаем массив контейнеров
