--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-     
+        <div id="tabsCarosel">
             <div class="tabs" id="tabs_crug_1">
                 <img src="{{ STATIC_URL }}images/tabs.jpg" alt=""/>
             </div>
@@ -25,6 +25,8 @@
             <div class="tabs" id="tabs_crug_3">
                 <img src="{{ STATIC_URL }}images/tabs_3.jpg" alt=""/>
             </div>
+        </div>
+
 
 
         <div class="benefits">
